--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,18 +14,66 @@
     <string name="camera">摄像头(相机)</string>
 
 
-    <string name = "cxname">H0</string>
-    <string name = "cxname2">H1</string>
-    <string name = "cxname3">H-1</string>
-    <string name = "cxname4">H2</string>
-    <string name = "cxname5">H-2</string>
-    <string name = "cxname6">H3</string>
-    <string name = "cxname7">H-3</string>
-    <string name = "cxname8">H4</string>
-    <string name = "cxname9">H-4</string>
-    <string name = "cxname10">JD1</string>
-    <string name = "cxname11">JD-1</string>
-    <string name = "cxname12">JD2</string>
-    <string name = "cxname13">JD-2</string>
+    <string name="cxname">H0</string>
+    <string name="cxname2">H1</string>
+    <string name="cxname3">H-1</string>
+    <string name="cxname4">H2</string>
+    <string name="cxname5">H-2</string>
+    <string name="cxname6">H3</string>
+    <string name="cxname7">H-3</string>
+    <string name="cxname8">H4</string>
+    <string name="cxname9">H-4</string>
+    <string name="cxname10">JD1</string>
+    <string name="cxname11">JD-1</string>
+    <string name="cxname12">JD2</string>
+    <string name="cxname13">JD-2</string>
+
+    <!--TestInformation 报检单对应string-->
+    <string name="test_infor_id">ID</string>
+    <string name="test_id">报检号</string>
+    <string name="test_time">申请检测时间</string>
+    <string name="test_starting_distance">待检区段起始里程</string>
+    <string name="test_ending_distance">待检区段结束里程</string>
+    <string name="test_length">待检区段长度</string>
+    <string name="wall_rock_type">围岩类型</string>
+    <string name="support_tickness">初支厚度</string>
+    <string name="separation_distance">间距(m/榀)</string>
+    <string name="mesh_distance">钢筋网间距</string>
+    <string name="annular_bar_distance">环向钢筋间距</string>
+    <string name="reinfor_prt_tickness">钢筋保护厚度</string>
+    <string name="sec_line_arch_tickness">二次衬砌厚度-拱部</string>
+    <string name="sec_line_wall_tickness">二次衬砌厚度-边墙</string>
+    <string name="sec_line_inver_arch_tickness">二次衬砌厚度-仰拱</string>
+    <string name="sec_line_filer_tickness">二次衬砌厚度-填充</string>
+    <string name="project_name">项目名称</string>
+    <string name="section_name">标段名称</string>
+    <string name="tunnel_name">隧道名称</string>
+    <string name="worksite_name">工点名称</string>
+    <string name="statute">状态</string>
+    <string name="beizhu1">备注1</string>
+    <string name="beizhu2">备注2</string>
+    <string name="beizhu3">备注3</string>
+    <string name="beizhu4">备注4</string>
+    <string name="beizhu5">备注5</string>
+
+    <string name="beizhu6">备注6</string>
+    <string name="beizhu7">备注7</string>
+    <string name="beizhu8">备注8</string>
+    <string name="beizhu9">备注9</string>
+    <string name="beizhu10">备注10</string>
+
+    <string name="beizhu11">备注11</string>
+    <string name="beizhu12">备注12</string>
+    <string name="beizhu13">备注13</string>
+    <string name="beizhu14">备注14</string>
+    <string name="beizhu15">备注15</string>
+
+    <!--    detectionInformation对应string-->
+    <string name="detectionId">ID</string>
+    <string name="tunnelId">隧道编号</string>
+    <string name="detectionStartingDistance">检测起点</string>
+    <string name="detectionEndingDistance">检测终点</string>
+    <string name="detectionLength">检测长度</string>
+    <string name="detectionLineBiaohao">测线编号</string>
 
 </resources>
